# wl-gammactl

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  wl-gammactl.spec
glade/: window_main.glade  window_main.gresource.xml
src/: main.c  resources.c  wlr-gamma-control-unstable-v1-client-protocol.c  wlr-gamma-control-unstable-v1-client-protocol.h
